# game

./: .gitignore  Cargo.toml  PLAN.md
client/: Cargo.toml
client/src/: godot_bridge.rs  input_queue.rs  lib.rs  main.rs  network_client.rs  prediction.rs  state.rs
godot_project/: cdda_client.gdextension  project.godot
godot_project/scenes/: game.tscn  main.tscn  main_menu.tscn
godot_project/scripts/: entity_view.gd  game.gd  game_manager.gd  global.gd  hud.gd  input_handler.gd  main_menu.gd  map_view.gd  test_connect.gd
protocol/: Cargo.toml
protocol/src/: lib.rs  messages.rs  types.rs
server/: Cargo.toml
server/src/: main.rs
server/src/network/: mod.rs
server/src/storage/: save.rs
server/src/world/: ai.rs  combat.rs  crafting.rs  entity.rs  fov.rs  item.rs  map.rs  messagelog.rs  mod.rs  pathfinding.rs  sub_world.rs  tile.rs  world_manager.rs  worldgen.rs
