[package]
name = "client"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
protocol = { path = "../protocol" }
quinn = "0.11"
rmp-serde = "1"
rustls = { version = "0.23", default-features = false, features = ["aws_lc_rs"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
godot = { git = "https://github.com/godot-rust/gdext.git", features = ["register-docs"] }
