[package]
name = "server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
protocol = { path = "../protocol" }
tokio = { version = "1", features = ["full"] }
quinn = "0.11"
rmp-serde = "1"
rcgen = "0.13"
rustls = "0.23"
anyhow = "1"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-futures = "0.2"

[dev-dependencies]
tempfile = "3"
